--- a/BirkaBills/src/app/app.component.html
+++ b/BirkaBills/src/app/app.component.html
@@ -8,24 +8,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="">Acerca de Birka</a>
+          <a class="nav-link" aria-current="page" [routerLink]="'/about-us'">Acerca de Birka</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Precios</a>
+          <a class="nav-link" [routerLink]="'/pricing'">Precios</a>
         </li>
-        <!--<li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>-->
         <li class="nav-item">
           <a class="nav-link">FAQ</a>
         </li>
@@ -77,7 +64,7 @@
       <!--<a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
         </a>-->
-      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Yggdrasil LTD</span>
+      <span id="text-footer" class="mb-3 mb-md-0 text-body-secondary">© 2023 Yggdrasil LTD</span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
