agregado de imágenes a la pantalla principal

--- a/BirkaBills/src/app/components/home/home.component.html
+++ b/BirkaBills/src/app/components/home/home.component.html
@@ -17,13 +17,14 @@
           nuestra base datos es amplia.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+        <img style="width:500px" src="./assets/images/facturacion-electronica.jpg">
+        <!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
           height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
           preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%"
             fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-        </svg>
+        </svg>-->
       </div>
     </div>
 
@@ -37,13 +38,14 @@
           mediante totales y si quieres realizar la auditoría de tu inventario puedes hacer un reporte detallado.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+        <img src="./assets/images/dashboard-de-ventas.jpg" style="width: 470px">
+        <!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
           height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
           preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%"
             fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-        </svg>
+        </svg>-->
       </div>
     </div>
 
@@ -57,13 +59,14 @@
           inventario estático para optimizar los procesos de facturación de tu negocio.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+        <img src="./assets/images/catalogo-productos.png" style="width: 500px">
+        <!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
           height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
           preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%"
             fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-        </svg>
+        </svg>-->
       </div>
     </div>
 
